force-app/main/default/objects/clofor_com_cfs__HouseBkg__c/fields/clofor_com_cfs__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled?</label>
    <type>Checkbox</type>
</CustomField>