force-app/main/default/objects/clofor_com_cfs__HouseBkg__c/fields/clofor_com_cfs__ContainerQty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerQty__c</fullName>
    <label>Container Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>