force-app/main/default/objects/clofor_com_cfs__HouseBkg__c/fields/clofor_com_cfs__FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FTMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>House Bkg</relationshipLabel>
    <relationshipName>House_Bkg</relationshipName>
    <type>Lookup</type>
</CustomField>