force-app/main/default/objects/clofor_com_cfs__HouseBkg__c/fields/clofor_com_cfs__MasterBkg__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MasterBkg__c</fullName>
    <label>Master Bkg</label>
    <referenceTo>clofor_com_cfs__EBooking__c</referenceTo>
    <relationshipLabel>House Bkg</relationshipLabel>
    <relationshipName>House_Bkg</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>